--- a/maui63_postprocessing/web/templates/upload.html
+++ b/maui63_postprocessing/web/templates/upload.html
@@ -5,6 +5,7 @@
 <form method=post enctype=multipart/form-data>
     Video File: <input type = "file" name = "video" /> <br>
     UAV Logs: <input type = "file" name = "logs" /> <br>
+    R/Vision URL: <input type="text" id="fname" name="fname" value={{rvision_url}}><br>
     <input type = "submit"/>
 </form>   
 {% endblock %}
