--- a/maui63_postprocessing/web/templates/layout.html
+++ b/maui63_postprocessing/web/templates/layout.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>Maui63 Post-Processing Tool</title>
+        
+        {% block head %}
+		{% endblock %}
+        
     </head>
     
     <body>
